Prevent numbers clipping on input fields

--- a/styles/layouts/document.css
+++ b/styles/layouts/document.css
@@ -262,7 +262,7 @@
   font-size: 18px;
   font-weight: 900;
   width: 250px;
-  height: 30px;
+  height: auto;
   padding: 5px 0;
   margin: 0;
   background-color: transparent;
